# anan

./: .gitignore  Cargo.toml  LLMS.md  PLAN.md  README.md  SESSION.md
examples/: cascade_smoke.rs  dump_db.rs  fep_smoke.rs  person_smoke.rs  scm_smoke.rs  write_smoke.rs
src/: app.rs  lib.rs  main.rs  theme.rs
src/db/: database.rs  mod.rs
src/db/repo/: citation.rs  common.rs  event.rs  family.rs  media.rs  mod.rs  note.rs  person.rs  place.rs  relationships.rs  repository.rs  source.rs  tag.rs
src/gramps/: citation.rs  common.rs  date.rs  enums.rs  event.rs  family.rs  media.rs  mod.rs  note.rs  person.rs  place.rs  repository.rs  source.rs  tag.rs
src/views/: canvas_tree.rs  citation.rs  detail_ui.rs  event.rs  family.rs  list_pane.rs  media.rs  mod.rs  network.rs  note.rs  person.rs  person_detail.rs  person_list.rs  place.rs  repository.rs  search.rs  source.rs  tag.rs  tree.rs
src/views/widgets/: date_display.rs  date_edit.rs  mod.rs  styled_text.rs
test-fixtures/: sample.db
