[package]
name = "gramps-desktop"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
publish = false

# Phase 1 uses only the DB + serde stack. iced, rfd, tracing, etc. come in Phase 2+.
# Keeping deps minimal now makes `cargo run --example dump_db` iterate fast.

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
iced = { version = "0.13", features = ["tokio", "advanced"] }
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
