[package]
name = "anan"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
publish = false

[[bin]]
name = "anan"
path = "src/main.rs"

[[bin]]
name = "anan-cli"
path = "src/bin/cli.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
iced = { version = "0.13", features = ["tokio", "advanced", "canvas"] }
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
clap = { version = "4", features = ["derive", "env"] }
# UUID generation is hand-rolled in db::repo::common::new_handle — no
# external crate needed, and the dev box has no network reach for a fresh
# crates.io download anyway.

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
